<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/black_transparent">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:elevation="2dp">

            <com.groupphoto.groupphoto.Custom.Font.FontTextView
                android:id="@+id/font_x_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/font"
                android:textAlignment="center"
                android:textColor="@color/gp_red"
                android:background="@android:color/transparent"
                android:textSize="64dp" />

            <com.groupphoto.groupphoto.Custom.Font.FontTextView
                android:id="@+id/font_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="1dp"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/font"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="65dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@drawable/shape_dialog_rounded"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/couldn_t_sign_in"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/username_and_password_are_required"
                android:textAlignment="center"
                android:textColor="@color/black" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_dialog"
                android:layout_width="180dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@drawable/shape_button"
                android:padding="12dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>